--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-client</artifactId>
-            <version>4.2.0</version>
+            <version>4.7.0</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
@@ -100,6 +100,15 @@
             <artifactId>zkclient</artifactId>
             <version>0.10</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
